@@ -82,7 +82,7 @@ class UserServiceImplTest {
         registerRequest.setPassword("password");
 
         roleUser = Role.builder().id(1L).name(ERole.ROLE_USER.getName()).build();
-        user = User.builder().id(1L).login("testUser").email("test@example.com").roles(Set.of(roleUser)).build();
+        user = User.builder().id(1L).login("testUser").email("test@example.com").roles(Set.of(roleUser)).companies(Collections.emptySet()).build();
     }
 
     @AfterEach
